# js-hinid-youtube

./: .coverage  .coveragerc  .gitignore  .gitpod.yml  README.md  data.dvc  pyproject.toml  pytest.ini  requirements-test.txt  setup.py
.dvc/: config
.github/workflows/: ci.yaml  cml.yaml
configs/: config.yaml  train.yaml
configs/callbacks/: early_stopping.yaml  model_checkpoint.yaml  model_summary.yaml  rich_progress_bar.yaml
configs/data/: cat_dog.yaml
configs/experiment/: catdog_ex.yaml
configs/logger/: aim.yaml  default.yaml  many_loggers.yaml  mlflow.yaml  tensorboard.yaml
configs/model/: timm_classify.yaml
configs/trainer/: default.yaml
data/: customer.csv.dvc
dvc-project/: README.md  dvc.yaml
scripts/: create_training_report.py
src/: data_ingestion.py  download_samples.py  infer.py  train.py  utils.py
src/data/: datamodule.py
src/models/: classifier.py  timmclassifier.py
tests/: conftest.py
tests/test_datamodule/: test_cat_dog_datamodule.py
tests/test_models/: test_timm_classifier.py
tests/test_train/: test_training.py
