[project]
name = "mlops-pratice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "lightning[extra]>=2.5.0.post0",
    "loguru>=0.7.3",
    "rich>=13.9.4",
    "tensorboard>=2.18.0",
    "timm>=1.0.14",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
